# CRUSTy-Architecture-Example

./: .gitignore  .roomodes  CRUSTy_Setup.md  Cargo.toml  DevLog.md  Makefile  Pflash_mirroredEnv.icf  README.md  SystemDesignDocument.md  benchmark_tests.md  build.rs  cbindgen.toml  cross_compile_context.md  crusty_firmware.out  exampleBuild.rs  fifo_cpp.cpp  k65_linker_gnu_placeholder.ld  main-rust.cpp  main.cpp  main_cpp.cpp  main_rust.cpp
.cargo/: config.toml
.roo/: system-prompt-architect  system-prompt-ask  system-prompt-code  system-prompt-debug  system-prompt-test
docs/: DESIGN.md  DEVELOPMENT.md  EMBEDDED_MIGRATION.md  SETUP.md
docs/IAR Reference/: IAR_BUILD_GUIDE.md  k65_linker_placeholder.icf  main_reference.rs
include/: CommandMessage.h  CrustyArch.h  crustyArchitecture.hpp  crustyArchitectureExample.hpp  fifo_cpp.h
mirroredEnv/: Makefile  Pflash_mirroredEnv.icf  cbindgen.toml  main.cpp
mirroredEnv/cargo/: config.toml
mirroredEnv/src/: c_api.rs
src/: c_api.rs  fifo.rs  io_retarget.c  lib.rs  main.rs  rust_functions.rs
