[package]
name = "crustyArchitecture"
version = "0.1.0"
edition = "2024"

[lib]
name = "crustyArchitecture"
crate-type = ["staticlib"] # Build only the static library

[build-dependencies]
cbindgen = "0.28.0"

[dependencies]
heapless = "0.7" # For no_std collections
panic-halt = "0.2.0" # Panic handler
spin = "0.9" # For basic no_std locking

# Removed dependencies section as once_cell is no longer needed

[profile.release]
panic = 'abort'      # Abort on panic
opt-level = "z"      # Optimize for size
lto = true           # Enable Link Time Optimization
codegen-units = 1    # Maximize size optimization opportunities
strip = true         # Strip symbols from binary
